--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -308,12 +308,12 @@ html .hero {
 
 // Calendrier *******************************
 .calendrier {
-    padding: 5px 5px 5px 30px;
+    padding: 5px 5px 5px 30px !important;
 }
 
 .addeventatc_icon {
-    left: 6px;
-    top: 4px;
+    left: 6px !important;
+    top: 4px !important;
 }
 
 // Partners *********************************
