--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -309,12 +309,15 @@ html .hero {
 // Calendrier *******************************
 .calendrier {
     padding: 5px 5px 5px 30px !important;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .addeventatc_icon {
     left: 6px !important;
     top: 4px !important;
 }
+
 
 // Partners *********************************
 .cio-sponsors {
