--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -140,7 +140,7 @@ html .hero {
 }
 .the_claim {
     position: absolute;
-    color: #ffffff;
+    color: #ce0071;
     width: inherit;
     font-size: 45px;
     line-height: 50px;
