--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -259,7 +259,7 @@ html .hero {
 }
 @media(max-width: 991px) {
     .navbar-collapse {
-    	z-index: -1;
+    	margin-top: 125px;
     }
 }
 .volunteers_text p {
