--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -357,6 +357,9 @@ html .hero {
     .cio-sponsors {
 	      padding-top: 10px;
     }
+    .navbar-collapse {
+    	margin-top: 0px;
+    }
 }
 .partners-title {
     color: black;
