--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -1,5 +1,5 @@
 html .hero {
-    background-size: cover;
+    background-size: contain;
     height: 900px;
     margin-top: 190px;
     .container {
