--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -308,9 +308,9 @@ html .hero {
 
 // Calendrier *******************************
 .calendrier {
-    padding: 5px 5px 5px 30px !important;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    padding: 12px 12px 10px 12px !important;
+    margin-left: 10px;
+    margin-bottom: -8px;
 }
 
 .addeventatc_icon {
