--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -316,6 +316,9 @@ html .hero {
 .addeventatc_icon {
     left: 6px !important;
     top: 4px !important;
+    width: 12px;
+    height: 12px;
+    background-size: 12px 12px;
 }
 
 
