--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -309,16 +309,16 @@ html .hero {
 // Calendrier *******************************
 .calendrier {
     padding: 12px 12px 10px 12px !important;
-    margin-left: 10px;
-    margin-bottom: -8px;
+    margin-left: 10px !important;
+    margin-bottom: -8px !important;
 }
 
 .addeventatc_icon {
     left: 6px !important;
     top: 4px !important;
-    width: 12px;
-    height: 12px;
-    background-size: 12px 12px;
+    width: 12px !important;
+    height: 12px !important;
+    background-size: 12px 12px !important;
 }
 
 
