--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -14,7 +14,7 @@ body {
     font-family: Montserrat, sans-serif;
     font-size: 14px;
     line-height: 20px;
-    color: #fff;
+    color: #858585;
 }
 
 img {
