--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -5,8 +5,8 @@ html .hero {
     margin-top: 190px;
     .container {
         padding-top: 10px !important;
-	margin-left: 50px;
-	width: 1500px;
+        margin-left: 35% !important;
+        width: 60% !important;
     }
     @media (max-width: 1921px) {
         height: 800px;
