--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -126,7 +126,7 @@ html .hero {
 
 .the_claim {
     position: absolute;
-    color: #ffffff;
+    color: #ce0071;
     width: inherit;
     font-size: 45px;
     line-height: 50px;
@@ -141,7 +141,6 @@ html .hero {
     animation-fill-mode: both;
     -webkit-animation-direction: alternate;
     animation-direction: alternate;
-    background-color: rgba(0, 0, 0, 0.4);
     padding: 5px;
 }
 
