--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -86,6 +86,9 @@
 	    	<a class="socials_links youtube" href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
 	      	    <img height="24" src="/images/layout/YouTube-icon.png">
 	    	</a>
+		<a class="socials_links flickr" href="https://www.flickr.com/photos/lausanne2020/albums" target="_blank" rel="noopener">
+	      	    <img height="24" src="/images/layout/Flickr-icon.png">
+	    	</a>
 	    </div>  
 	    <div class="nav_lang col-md-12 col-sm-6 col-xs-6">
 	        {% for lang in site.languages %}
