--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -163,7 +163,8 @@
 	margin-top: 10px !important;
     }
     .smartphone {
-	margin-left: 20px !important;	    
+	margin-left: 0px !important;
+	padding-left: 0px !important;
     }
 }
 @media (max-width:440px) {
