--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -63,6 +63,9 @@
           <a href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
               <img height="28" src="/images/layout/YouTube-icon.png">
             </a>
+          <a href="https://www.flickr.com/photos/lausanne2020/" target="_blank" rel="noopener">
+              <img height="28" src="/images/layout/Flickr-icon.png">
+            </a>
         </div>
       </div>
     </div>
