--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -5,8 +5,8 @@ html .hero {
     margin-top: 190px;
     .container {
         padding-top: 10px !important;
-        margin-left: 35% !important;
-        width: 60% !important;
+        margin-left: 5% !important;
+	max-width: 70% !important;
     }
     @media (max-width: 1921px) {
         height: 800px;
@@ -127,6 +127,9 @@ html .hero {
 .the_claim {
     position: absolute;
     color: #ce0071;
+    background-color: rgba(255, 255, 255, 0.6);
+    padding-left: 1%;
+    padding-right: 1%;
     width: inherit;
     font-size: 45px;
     line-height: 50px;
