--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -14,7 +14,7 @@ html .hero {
 	.container {
             padding-top: 10px !important;
 	    margin-left: 50px;
-	    width: 1200px;
+	    width: auto;
         }
     }
     @media (max-width: 1651px) {
@@ -23,7 +23,7 @@ html .hero {
 	.container {
             padding-top: 10px !important;
 	    margin-left: 50px;
-	    width: 1200px;
+	    width: auto;
         }
     }
     @media (max-width: 1501px) {
@@ -32,7 +32,7 @@ html .hero {
 	.container {
             padding-top: 20px !important;
 	    margin-left: 20px;
-	    width: 800px;
+	    width: auto;
         }
         .the_claim {
             font-size: 30px;
@@ -47,7 +47,7 @@ html .hero {
 	.container {
             padding-top: 10px !important;
 	    margin-left: 10px;
-	    width: 750px;
+	    width: auto;
         }
     }
     @media (max-width: 1155px) {
@@ -56,7 +56,7 @@ html .hero {
 	.container {
             padding-top: 10px !important;
 	    margin-left: 10px;
-	    width: 800px;
+	    width: auto;
         }
     }
     @media (max-width: 990px) {
@@ -65,7 +65,7 @@ html .hero {
 	.container {
             padding-top: 0px !important;
 	    margin-left: 10px;
-	    width: 650px;
+	    width: auto;
         }
 	.the_claim {
             font-size: 20px;
@@ -81,7 +81,7 @@ html .hero {
 	.container {
             padding-top: 0px !important;
 	    margin-left: 0px;
-	    width: 600px;
+	    width: auto;
         }
         .the_claim {
             font-size: 20px;
@@ -96,7 +96,7 @@ html .hero {
         margin-top:200px;
 	.container {
 	    margin-left: 10px;
-	    width: 480px;
+	    width: auto;
 	    padding-top: 0px;
         }
 	.the_claim {
@@ -111,7 +111,7 @@ html .hero {
 	margin-top: 200px;
 	.container {
 	    margin-left: 0px;
-	    width: 400px;
+	    width: auto;
         }
         .the_claim {
             font-size: 10px;
